fix: adjust margin for better alignment

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -3,7 +3,7 @@
   background: var(--background-dark);
   color: var(--text-main);
   font-size: 0.8rem;
-  margin: 0.5rem 1rem;
+  margin: auto 1rem 0.5rem;
   border-radius: 0.5rem;
 
   & ul {
